# standardnotes-rs

./: .env.sample  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  Rocket.toml  docker-compose.yml  rocket.toml  rust-toolchain
.github/: dependabot.yml
.github/workflows/: tests.yml
migrations/2020-08-06-055613_users/: up.sql
migrations/2020-08-06-055617_items/: down.sql  up.sql
src/: api.rs  db.rs  jwt.rs  main.rs  models.rs  schema.rs  tests.rs
src/api/: auth.rs  mod.rs  session.rs  sync.rs
