[package]
name = "standardnotes-rs"
version = "0.1.0"
authors = ["Lane Sawyer <github@lanesawyer.dev>"]
edition = "2018"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
diesel = { version = "1.4.4", features = ["postgres", "chrono"] }
diesel_migrations = "1.4.0"
dotenv = "0.15.0"
env_logger = "0.8.2"
jsonwebtoken = "7"
log = "0.4.13"
rocket = "0.4.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"

[dependencies.rocket_contrib]
version="0.4.6"
default-features=false
features=["diesel_postgres_pool", "json"]
