[package]
name = "standardnotes-rs"
version = "0.1.0"
authors = ["Lane Sawyer <github@lanesawyer.dev>"]
edition = "2018"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
diesel = { version = "1.4.8", features = ["postgres", "chrono", "uuid"] }
diesel_migrations = "1.4.0"
dotenv = "0.15.0"
env_logger = "0.9.1"
jsonwebtoken = "7"
log = "0.4.17"
rocket = "0.4.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"

[dependencies.rocket_contrib]
version="0.4.10"
default-features=false
features=["diesel_postgres_pool", "json"]
