[package]
name = "standardnotes-rs"
version = "0.1.0"
authors = ["Lane Sawyer <github@lanesawyer.dev>"]
edition = "2021"

[dependencies]
chrono = { version = "0.4.22", features = ["serde"] }
diesel = { version = "1.4.8", features = ["postgres", "chrono", "uuid"] }
diesel_migrations = "1.4.0"
dotenv = "0.15.0"
env_logger = "0.9.1"
jsonwebtoken = "7.2.0"
log = "0.4.17"
rocket = { version = "0.5.0-rc.2", features = ["json"] }
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.85"

[dependencies.rocket_sync_db_pools]
version = "0.1.0-rc.2"
features = ["diesel_postgres_pool"]
